k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-lab-web
spec:
  selector:
    app: gitops-lab-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
